2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Open file in binary mode.
	* src/CookieStorage.cc
	* src/DHTSetup.cc
	* src/DHTUtil.cc
	* src/Netrc.cc
	* src/NsCookieParser.cc
	* src/ProtocolDetector.cc
	* src/RequestGroupMan.cc
	* src/Signature.cc
	* src/bencode.cc
	* src/download_helper.cc
	* src/option_processing.cc
	* test/CookieParserTest.cc
	* test/DefaultBtProgressInfoFileTest.cc
	* test/FileTest.cc
	* test/GZipDecoderTest.cc
	* test/RequestGroupManTest.cc
	* test/SignatureTest.cc
	* test/SingleFileAllocationIteratorTest.cc
	* test/UriListParserTest.cc

2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed operator[] because it is ambiguous with built-in []
	operator.
	* src/array_fun.h
	
2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error
	* src/OptionParser.cc
	
2009-02-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing call to arrayWrapperConst
	* test/array_funTest.cc

2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use array_wrapper instead of array_ptr.
	* src/DHTRoutingTableDeserializer.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed template<typename S> array_ptr(const array_ptr<S>& s)
	* src/array_fun.h

2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added array_wrapper template.
	* src/array_fun.h
	* test/array_funTest.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use operator T* of array_ptr.
	* src/OptionParser.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use localhost instead of 127.0.0.1
	* test/FtpConnectionTest.cc
	* test/MSEHandshakeTest.cc
	
2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added operator T*
	* src/array_fun.h
	* test/array_funTest.cc

2009-02-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
